Refs #8621; Fix for bottom widgets height; Overwrite tagclod hiperlinks color, tagcloud background color; Keep 'all items' button always visible

--- a/trunk/eea.mediacentre/branches/plone4/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
+++ b/trunk/eea.mediacentre/branches/plone4/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
@@ -59,23 +59,23 @@ h1#player-title {
     border-bottom: none;
 }
 
-#top-widgets #topright-widgets.multimedia-widget #tag-cloud #faceted-form .widget-fieldset legend {
+#top-widgets #topright-widgets.multimedia-widget #faceted-form #tag-cloud  .widget-fieldset legend {
     padding: 0;
     margin-bottom: 0;
 }
 
-#top-widgets #topright-widgets #tag-cloud #faceted-form ul.tags-cloud {
+#top-widgets #topright-widgets #faceted-form #tag-cloud ul.tags-cloud {
     width: 300px;
 }
 
-#top-widgets #topright-widgets #tag-cloud #faceted-form ul.tags-cloud li,
-#top-widgets #topright-widgets #tag-cloud #faceted-form ul.tags-cloud li a {
+#top-widgets #topright-widgets #faceted-form #tag-cloud ul.tags-cloud li,
+#top-widgets #topright-widgets #faceted-form #tag-cloud ul.tags-cloud li a {
     color: #FFFFFF !important;
 }
 
 #bottom-widgets {
     top:1140px;
-    height:386px;
+    height:355px;
     position: relative;	
     width:100%;
 }
@@ -124,13 +124,17 @@ h1#player-title {
 }
 
 #multimedia-vids #multimedia-highlights {
-    overflow: auto;
-    height: 334px;
+    height: 303px;
     -webkit-border-radius: 0 0 10px 10px;
        -moz-border-radius: 0 0 10px 10px;
         -ms-border-radius: 0 0 10px 10px;
          -o-border-radius: 0 0 10px 10px;
             border-radius: 0 0 10px 10px;
+}
+
+#multimedia-vids #multimedia-highlights .gallery-ajax {
+    height: 250px;
+    overflow: auto;
 }
 
 #multimedia-vids #multimedia-highlights ul.gallery-layout-selection {
@@ -264,8 +268,6 @@ ul#tabs li a.current, ul#tabs li a:hover {
    text-shadow: 1px 1px 1px #000000;
 } 
 
-
-
 #whatsnew-gallery .highlights {
     color: #fff;
     background: none repeat scroll 0 0 rgba(52, 111, 131, 0.6);
@@ -282,7 +284,7 @@ ul#tabs li a.current, ul#tabs li a:hover {
 
 /* elements from other pages */
 #tag-cloud {
-    background: none repeat scroll 0 0 rgba(52, 111, 131, 0.6);
+    background: none repeat scroll 0 0 rgba(52, 111, 131, 0.6) !important;
     height: 265px;
     margin-top: -17px;
 }
